--- a/exp-hack4-brain-wave-main/EEGITNet.ipynb
+++ b/exp-hack4-brain-wave-main/EEGITNet.ipynb
@@ -189,14 +189,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from datasets import load_dataset"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3eWB7IqnoDiC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from datasets import load_dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -559,14 +559,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# xdata = Raw(epochs[0])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OtEb1xLal3DA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# xdata = Raw(epochs[0])"
+      ]
     },
     {
       "cell_type": "code",
@@ -756,12 +756,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "YyayhTUYPU7q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -965,33 +965,33 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "56ATqj0pAVdU"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "from skorch.callbacks import LRScheduler"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "V8TUzDUwmiRu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from skorch.callbacks import LRScheduler"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "lr = 0.0625 * 0.01\n",
-        "weight_decay = 0"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ICONZwlayL91"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "lr = 0.0625 * 0.01\n",
+        "weight_decay = 0"
+      ]
     },
     {
       "cell_type": "code",
@@ -1039,14 +1039,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "i = 0"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4MvpsYfNr2-7"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "i = 0"
+      ]
     },
     {
       "cell_type": "code",
@@ -1065,56 +1065,56 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "ye2KmZXt-974"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "net.history"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "5ac3t5ZrpVPX"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "net.history"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "net.history"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DhK_a3WoF2Gg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "net.history"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "i"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "E6fHnimSKhaE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "i"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "with open('ex4_epoch_414.pkl', 'rb') as file:\n",
-        "    best_model = pickle.load(file)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "h8v9S6Ddt_iu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "with open('ex4_epoch_414.pkl', 'rb') as file:\n",
+        "    best_model = pickle.load(file)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1128,26 +1128,26 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# model = model.to('cpu')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_ZuU_dc6FAei"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# model = model.to('cpu')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# with open(f'final/best_model_cpu.pkl', 'wb') as file:\n",
-        "#     pickle.dump(net, file)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nFNoeYvVFuXa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# with open(f'final/best_model_cpu.pkl', 'wb') as file:\n",
+        "#     pickle.dump(net, file)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1173,14 +1173,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(res)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ZUNs4QSvrYNM"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "len(res)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1276,79 +1276,85 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "mrbl8rNKqrue"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# GridSearchCV"
-      ],
       "metadata": {
         "id": "fQqc4raiqsUQ"
-      }
+      },
+      "source": [
+        "# GridSearchCV"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "bS6crrX4tlSt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "splitted = windows_dataset.split({'train':[4456], 'test': [1100]})\n",
-        "\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Y0dUlSE6sw2W"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "splitted = windows_dataset.split({'train':[4456], 'test': [1100]})\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "splitted"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "EpBztBRbuJ0a"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "splitted"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_set = splitted['train']  # Session train\n",
-        "test_set = splitted['test']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "VrCyofhftUJD"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_set = splitted['train']  # Session train\n",
+        "test_set = splitted['test']"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "PRIUaH9CrR6U"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "PI-SW0RUqwzv"
+      },
+      "outputs": [],
       "source": [
         "# import pandas as pd\n",
         "# from sklearn.model_selection import GridSearchCV\n",
@@ -1382,13 +1388,7 @@
         "# best_run = search_results[search_results[\"rank_test_score\"] == 1].squeeze()\n",
         "\n",
         "# best_parameters = best_run[\"params\"]"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "PI-SW0RUqwzv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -1527,7 +1527,7 @@
       },
       "outputs": [],
       "source": [
-        "test_set = load_dataset('Expss4/test_seq_for_app_donot_download',token='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')"
+        "test_set = load_dataset('Expss4/test_seq_for_app_donot_download',token='<your_hugging_face_tokens>')"
       ]
     },
     {
@@ -1543,14 +1543,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "GFo4aPj-ogcj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import numpy as np"
+      ]
     },
     {
       "cell_type": "code",
@@ -1581,17 +1581,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "id_test.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "WCg5jtnbwb4q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "id_test.shape"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LARNd742wozY"
+      },
+      "outputs": [],
       "source": [
         "# Reshape to desired shape (480, 8, 867)\n",
         "desired_shape = (480, 8)\n",
@@ -1600,59 +1605,59 @@
         "# Print the shapes for verification\n",
         "print(\"Original shape:\", id_test.shape)\n",
         "print(\"Reshaped shape:\", id_test_reshaped.shape)"
-      ],
-      "metadata": {
-        "id": "LARNd742wozY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data_single_column = id_test_reshaped[:, 0].reshape(-1, 1)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OF7r8jKpxTUu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data_single_column = id_test_reshaped[:, 0].reshape(-1, 1)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data_single_column.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "pGFLxZGzx1lV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data_single_column.shape"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "type(data_single_column)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Ih_gR8FPyPZu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "type(data_single_column)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "id_test = np.array(data_single_column)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "P4p72qLtySlp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "id_test = np.array(data_single_column)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2564Ul-EjOPb"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "# Sample EEG signal with wrong shape\n",
@@ -1664,23 +1669,18 @@
         "# Print the shapes for verification\n",
         "print(\"Original shape:\", X_test.shape)\n",
         "print(\"Reshaped shape:\", eeg_signal_reshaped.shape)"
-      ],
-      "metadata": {
-        "id": "2564Ul-EjOPb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_test = eeg_signal_reshaped"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "E_O9u0gCp0VH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_test = eeg_signal_reshaped"
+      ]
     },
     {
       "cell_type": "code",
@@ -1706,25 +1706,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_test.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-77nP9hZoz5E"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_test.shape"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "best_model.predict(X_test)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Qo1zOVIiqYS0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "best_model.predict(X_test)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1741,8 +1741,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ychfISxFeJwn",
-        "collapsed": true
+        "collapsed": true,
+        "id": "ychfISxFeJwn"
       },
       "outputs": [],
       "source": [
@@ -1751,14 +1751,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(submit_res)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3mQJw3jvqImE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "len(submit_res)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1782,8 +1782,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dP1NAhL9d9f0",
-        "collapsed": true
+        "collapsed": true,
+        "id": "dP1NAhL9d9f0"
       },
       "outputs": [],
       "source": [
@@ -1792,14 +1792,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "l_MXIYWavpj-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import pandas as pd"
+      ]
     },
     {
       "cell_type": "code",
@@ -1814,50 +1814,50 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "p = id_test"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4zTlTeAkybgv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "p = id_test"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "p"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Y7E4La3wytLH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "p"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Bt35fXyCv0Ws"
+      },
+      "outputs": [],
       "source": [
         "df = pd.DataFrame({\n",
         "    'predict': tmp,\n",
         "    'id': p\n",
         "})"
-      ],
-      "metadata": {
-        "id": "Bt35fXyCv0Ws"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jcT6wTl9y-y_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df"
+      ]
     },
     {
       "cell_type": "code",
@@ -1872,91 +1872,91 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "result = pd.merge(submit_df, df[['id', 'predict']], on='id', how='left')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "z8-7-zvNzX4P"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result = pd.merge(submit_df, df[['id', 'predict']], on='id', how='left')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "mQ_fE8ghzZPq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result = result.drop('predict_x', axis = 1)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yBPSMQv3zpID"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result = result.drop('predict_x', axis = 1)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result.rename(columns={'predict_y': 'predict'}, inplace=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7ZXNRc1kzwXZ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result.rename(columns={'predict_y': 'predict'}, inplace=True)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XG0nDryO0Eim"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result.loc[0:2, 'predict'] = [110, 150, 150]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6E4_zahz0P8-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result.loc[0:2, 'predict'] = [110, 150, 150]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3TIUmULE0k2v"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "result.to_csv('mixueicecreamcha4.csv',index= False)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cqnlLPRe0HqQ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "result.to_csv('mixueicecreamcha4.csv',index= False)"
+      ]
     },
     {
       "cell_type": "code",
@@ -1984,32 +1984,32 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.to_csv('app_log.csv', index = False)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7P-sY_F-E7Cg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df.to_csv('app_log.csv', index = False)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "9QYMEps4E7Pw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "0kPJ0uAME7eA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
